--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline'"
+      content="worker-src 'self' blob: ;"
     />
     <title>Hello Electron React!</title>
   </head>
