--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="worker-src 'self' blob: ;"
+      content="object-src 'self' blob: ;"
     />
     <title>Hello Electron React!</title>
   </head>
@@ -12,3 +12,4 @@
     <div id="root" style="width: 100vw; height: 100vh; overflow: hidden;"></div>
   </body>
 </html>
+
